--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
@@ -7,6 +7,24 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <StackPanel>
+            <Label Width="300" Height="65" FontSize="40" Content="Login"
+               Margin="20"
+               HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
+            <StackPanel Orientation="Horizontal" Margin="50,10">
+                <Label Content="Username" FontSize="25" Width="150" Height="45"></Label>
+                <TextBox Width="150" Height="45" FontSize="25"></TextBox>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="50,10">
+                <Label Content="Password" FontSize="25" Width="150" Height="45"></Label>
+                <PasswordBox Width="150" Height="45" FontSize="25"></PasswordBox>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="100,30">
+            <Button Width="120" Height="45" Content="Sign In" FontSize="22"></Button>
+            <Button Width="120" Height="45" Content="Register" FontSize="22" Margin="25,0"></Button>
+            </StackPanel>
+        </StackPanel>
+      
         
     </Grid>
 </Window>
