some structure is ready . . .

--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginSystemWithRepositoryAndUnitOfWorkPattern"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Background="SpringGreen">
     <Grid>
         <StackPanel>
             <Label Width="300" Height="65" FontSize="40" Content="Login"
