--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginSystemWithRepositoryAndUnitOfWorkPattern"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="SpringGreen">
+        Title="MainWindow" Height="600" Width="800" Background="SpringGreen" WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel>
             <Label Width="300" Height="65" FontSize="40" Content="Login"
@@ -20,7 +20,7 @@
                 <PasswordBox Width="150" Height="45" FontSize="25"></PasswordBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="100,30">
-            <Button Width="120" Height="45" Content="Sign In" FontSize="22"></Button>
+            <Button Width="120" Height="45" Content="Login" Command="{Binding LoginCommand}" FontSize="22"></Button>
             <Button Width="120" Height="45" Content="Register" FontSize="22" Margin="25,0"></Button>
             </StackPanel>
         </StackPanel>
