--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/MainWindow.xaml
@@ -13,14 +13,16 @@
                HorizontalAlignment="Left" VerticalAlignment="Top"></Label>
             <StackPanel Orientation="Horizontal" Margin="50,10">
                 <Label Content="Username" FontSize="25" Width="150" Height="45"></Label>
-                <TextBox Width="150" Height="45" FontSize="25"></TextBox>
+                <TextBox Text="{Binding UserName,Mode=TwoWay}" Width="150" Height="45" FontSize="25"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="50,10">
                 <Label Content="Password" FontSize="25" Width="150" Height="45"></Label>
-                <PasswordBox Width="150" Height="45" FontSize="25"></PasswordBox>
+                <PasswordBox Name="MyPasswordTxtb" Width="150" Height="45" FontSize="25"></PasswordBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="100,30">
-            <Button Width="120" Height="45" Content="Login" Command="{Binding LoginCommand}" FontSize="22"></Button>
+            <Button Width="120" Height="45" Content="Login" Command="{Binding LoginCommand}" 
+                     CommandParameter="{Binding ElementName=MyPasswordTxtb}"
+                    FontSize="22"></Button>
             <Button Width="120" Height="45" Content="Register" FontSize="22" Margin="25,0"></Button>
             </StackPanel>
         </StackPanel>
