--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/RegistriationWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/RegistriationWindow.xaml
@@ -7,6 +7,46 @@
         mc:Ignorable="d"
         Title="RegistriationWindow" Height="450" Width="800">
     <Grid Background="SpringGreen">
-        
+        <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Vertical">
+                <Label Width="115" Height="35" Content="Username" FontSize="16" 
+                                   Margin="0,20,0,0">
+
+                </Label>
+
+                <Label Width="115"  Height="35" Content="Password" FontSize="14" Margin="0,20,0,0">
+
+                </Label>
+
+
+                <Label Width="115"  Height="35" Content="IsMonitor" FontSize="14" Margin="0,20,0,0">
+
+                </Label>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Height="360" Width="160">
+                <TextBox Text="{Binding UserName,Mode=TwoWay}" Height="30" Width="140" Margin="0,0,0,0"></TextBox>
+                <PasswordBox Name="MyPasswordTxtb" Height="30" Width="140" Margin="0,20,0,0"></PasswordBox>
+
+
+                <CheckBox Content="No"  IsChecked="{Binding HasAdminRule}" Height="30" Width="140" Margin="0,30,0,0">
+                    <!--No ve ya Yes olmagini herdefe deyish dataTriggerle-->
+                </CheckBox>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Height="100" Width="160" Margin="120,-250,0,0">
+                <Button Width="130" Height="60" Background="White" BorderThickness="0" BorderBrush="AliceBlue" Margin="10,10,0,0"
+                                Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=MyPasswordTxtb}"
+                                Content="Add" FontFamily="Comic Sans MS" FontSize="24" 
+                                >
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="10"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+             
+
+            </StackPanel>
+
+        </StackPanel>
     </Grid>
 </Window>
