--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/RegistriationWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/RegistriationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginSystemWithRepositoryAndUnitOfWorkPattern.Domain.Views"
         mc:Ignorable="d"
-        Title="RegistriationWindow" Height="450" Width="800">
+        Title="RegistriationWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Background="SpringGreen">
         <StackPanel Orientation="Horizontal">
             <StackPanel Orientation="Vertical">
@@ -23,16 +23,16 @@
 
                 </Label>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Height="360" Width="160">
-                <TextBox Text="{Binding UserName,Mode=TwoWay}" Height="30" Width="140" Margin="0,0,0,0"></TextBox>
+            <StackPanel Orientation="Vertical" Height="360" Width="160" Margin="0,-160,0,0">
+                <TextBox Text="{Binding CurrentUser.UserName,Mode=TwoWay}" Height="30" Width="140" Margin="0,5,0,0"></TextBox>
                 <PasswordBox Name="MyPasswordTxtb" Height="30" Width="140" Margin="0,20,0,0"></PasswordBox>
 
 
-                <CheckBox Content="No"  IsChecked="{Binding HasAdminRule}" Height="30" Width="140" Margin="0,30,0,0">
+                <CheckBox Content="No"  IsChecked="{Binding CurrentUser.HasAdminRule}" Height="30" Width="140" Margin="0,30,0,0">
                     <!--No ve ya Yes olmagini herdefe deyish dataTriggerle-->
                 </CheckBox>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Height="100" Width="160" Margin="120,-250,0,0">
+            <StackPanel Orientation="Vertical" Height="100" Width="160" Margin="50,-320,0,0">
                 <Button Width="130" Height="60" Background="White" BorderThickness="0" BorderBrush="AliceBlue" Margin="10,10,0,0"
                                 Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=MyPasswordTxtb}"
                                 Content="Add" FontFamily="Comic Sans MS" FontSize="24" 
