--- a/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/PersonalUserWindow.xaml
+++ b/LoginSystemWithRepositoryAndUnitOfWorkPattern/Domain/Views/PersonalUserWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="LoginSystemWithRepositoryAndUnitOfWorkPattern.Domain.Views.RegistriationWindow"
+﻿<Window x:Class="LoginSystemWithRepositoryAndUnitOfWorkPattern.Domain.Views.PersonalUserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginSystemWithRepositoryAndUnitOfWorkPattern.Domain.Views"
         mc:Ignorable="d"
-        Title="RegistriationWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen">
+        Title="PersonalUserWindow" Height="600" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Background="SpringGreen">
         <StackPanel Orientation="Horizontal">
             <StackPanel Orientation="Vertical">
@@ -14,32 +14,26 @@
 
                 </Label>
 
-                <Label Width="115"  Height="35" Content="Password" FontSize="14" Margin="0,20,0,0">
+                <Label Width="115"  Height="35" Content="Password" FontSize="16" Margin="0,20,0,0">
 
                 </Label>
 
-
-                <Label Width="115"  Height="35" Content="HasAdminRule" FontSize="14" Margin="0,20,0,0">
-
-                </Label>
             </StackPanel>
             <StackPanel Orientation="Vertical" Height="360" Width="160" Margin="0,-160,0,0">
                 <TextBox Text="{Binding CurrentUser.UserName,Mode=TwoWay}" Height="30" Width="140" Margin="0,5,0,0"></TextBox>
                 <PasswordBox Name="MyPasswordTxtb" Height="30" Width="140" Margin="0,20,0,0"></PasswordBox>
 
 
-                <CheckBox Content="No"  IsChecked="{Binding CurrentUser.HasAdminRule}" Height="30" Width="140" Margin="0,30,0,0">
-                    <!--No ve ya Yes olmagini herdefe deyish dataTriggerle-->
-                </CheckBox>
+         
             </StackPanel>
-            <StackPanel Orientation="Vertical" Height="100" Width="160" Margin="50,-320,0,0">
+            <StackPanel Orientation="Vertical" Height="100" Width="160" Margin="50,-400,0,0">
                 <Button Width="130" Height="60" Background="White" BorderThickness="0" BorderBrush="AliceBlue" Margin="10,10,0,0"
-                                Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=MyPasswordTxtb}"
-                                Content="Add" FontFamily="Comic Sans MS" FontSize="24" 
+                                Command="{Binding UpdateCommand}" CommandParameter="{Binding ElementName=MyPasswordTxtb}"
+                                Content="Update" FontFamily="Comic Sans MS" FontSize="24" 
                                 >
-  
+
                 </Button>
-             
+
 
             </StackPanel>
 
